--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,5 +1,13 @@
+// button
 $button-txt: #ffffff;
 $button-bg: #00c8b3;
 $button-bg-hover:#01c8b3b3;
-$button-txt-disabled:  #dddcdc;
-$button-bg-disabled:  #f6f6f6;
+$button-txt-disabled:  #919090;
+$button-bg-disabled:  #e9e9e9;
+// input
+$input-txt: #919090;
+$input-txt-focus: #333333;
+$input-txt-border: #dddddd;
+
+$input-info-txt: #eb4a46;
+$input-info-border: #eb4a46;
