--- a/src/pages/user-form/userform.styles.scss
+++ b/src/pages/user-form/userform.styles.scss
@@ -1,7 +1,8 @@
-form {
+.form {
   padding: 20px;
-}
-.controls {
-  display: grid;
-  grid-template-columns: calc(100% - 200px) 100px 100px;
+  .form-group {
+    display: grid;
+    grid-template-columns: 50% 50%;
+   
+  }
 }
