--- a/src/pages/user-list/userlist.styles.scss
+++ b/src/pages/user-list/userlist.styles.scss
@@ -1,14 +1,16 @@
+@import "./../../colors.scss";
+
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
   td,
   th {
-    border: 1px solid #dddddd;
+    border: 1px solid $button-bg-disabled;
     text-align: left;
     padding: 8px;
   }
   tr:nth-child(even) {
-    background-color: #dddddd;
+    background-color: $button-bg-disabled;
   }
 }
