--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -13,6 +13,7 @@ button {
   &:disabled {
     background-color: $button-bg-disabled;
     color: $button-txt-disabled;
+    cursor: initial;
   }
   &:disabled:hover {
     background-color: $button-bg-disabled;
